src/globalStyles.css
@font-face {
  font-family: 'GillSans';
  src: url('/fonts/gill-sans.ttf') format('truetype');
}

  :root{
    --koggis-grön: #037D4F;
    --valla-grön: #16a654;
    --limejuice: #d1f2d5;
    --finvins-röd: #7D0331;
    --ovveblues: #036E7D;
    --bubblegum: #EAC0D8;
    --buckethat-svart: #221e1f;
    --kiss-efter-för-mycket-öl-gul: #CA8112;
    --reflex-vit: #F3F3F4;
    --regnig-betong: #414141;
    --lightGrey: #767676;
  }

